--- a/estilo.css
+++ b/estilo.css
@@ -1,16 +1,16 @@
 body{
 
-     background:linear-gradient(90deg, Red, Orange, Yellow, Green, Blue, Indigo,violet);
+     background: rgb(72, 103, 183);
 }
 h1{
       text-align: center;
       font-family: Arial;
-      color: rgb(0, 0, 0);
-      margin-top: 7%;
+      color: rgb(255, 255, 255);
+      margin-top: 3%;
       
 }
 h1:hover{
-      color:pink;
+      color:rgb(72, 103, 183);
       cursor: pointer;
 }
 form{
@@ -18,8 +18,13 @@ form{
  margin-top: 0.2%;
 }
 .box-parent-login{
-      background-color: white;
+      background-color: rgba(167, 167, 167, 0.906);
 }
 fieldset{
    size: 50%;
+}
+p{
+      text-align: center;
+      font-family: Arial;
+      color: rgb(255, 255, 255); 
 }
